versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Dates.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalDates
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function DatesDefaultConst() &
      bind(C, name='DatesDefaultConst')
   use iso_c_binding
   implicit none
   type(c_ptr) :: DatesDefaultConst
end function DatesDefaultConst

!! Create, default
function DatesDefault() &
      bind(C, name='DatesDefault')
   use iso_c_binding
   implicit none
   type(c_ptr) :: DatesDefault
end function DatesDefault

!! Create, general, const
function DatesCreateConst( &
   date, dateSize &
) &
      bind(C, name='DatesCreateConst')
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: dateSize
   type(c_ptr) :: date(dateSize)
   type(c_ptr) :: DatesCreateConst
end function DatesCreateConst

!! Create, general
function DatesCreate( &
   date, dateSize &
) &
      bind(C, name='DatesCreate')
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: dateSize
   type(c_ptr) :: date(dateSize)
   type(c_ptr) :: DatesCreate
end function DatesCreate

!! Assign
subroutine DatesAssign(handleLHS, handleRHS) &
      bind(C, name='DatesAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine DatesAssign

!! Delete
subroutine DatesDelete(handle) &
      bind(C, name='DatesDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine DatesDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function DatesRead(handle, filename, filenameSize) &
      bind(C, name='DatesRead')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: DatesRead
end function DatesRead

!! Write to file
function DatesWrite(handle, filename, filenameSize) &
      bind(C, name='DatesWrite')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: DatesWrite
end function DatesWrite

!! Print to standard output, in our prettyprinting format
function DatesPrint(handle) &
      bind(C, name='DatesPrint')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: DatesPrint
end function DatesPrint

!! Print to standard output, as XML
function DatesPrintXML(handle) &
      bind(C, name='DatesPrintXML')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: DatesPrintXML
end function DatesPrintXML

!! Print to standard output, as JSON
function DatesPrintJSON(handle) &
      bind(C, name='DatesPrintJSON')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: DatesPrintJSON
end function DatesPrintJSON


!! -----------------------------------------------------------------------------
!! Child: date
!! -----------------------------------------------------------------------------

!! Has
function DatesDateHas(handle) &
      bind(C, name='DatesDateHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: DatesDateHas
end function DatesDateHas

!! Clear
subroutine DatesDateClear(handle) &
      bind(C, name='DatesDateClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine DatesDateClear

!! Size
function DatesDateSize(handle) &
      bind(C, name='DatesDateSize')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: DatesDateSize
end function DatesDateSize

!! Add
subroutine DatesDateAdd(handle, fieldHandle) &
      bind(C, name='DatesDateAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DatesDateAdd

!! Get, by index \in [0,size), const
function DatesDateGetConst(handle, index) &
      bind(C, name='DatesDateGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: DatesDateGetConst
end function DatesDateGetConst

!! Get, by index \in [0,size)
function DatesDateGet(handle, index) &
      bind(C, name='DatesDateGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: DatesDateGet
end function DatesDateGet

!! Set, by index \in [0,size)
subroutine DatesDateSet(handle, index, fieldHandle) &
      bind(C, name='DatesDateSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DatesDateSet

!! ------------------------
!! Re: metadatum value
!! ------------------------

!! Has, by value
function DatesDateHasByValue(handle, meta, metaSize) &
      bind(C, name='DatesDateHasByValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: DatesDateHasByValue
end function DatesDateHasByValue

!! Get, by value, const
function DatesDateGetByValueConst(handle, meta, metaSize) &
      bind(C, name='DatesDateGetByValueConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: DatesDateGetByValueConst
end function DatesDateGetByValueConst

!! Get, by value
function DatesDateGetByValue(handle, meta, metaSize) &
      bind(C, name='DatesDateGetByValue')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: DatesDateGetByValue
end function DatesDateGetByValue

!! Set, by value
subroutine DatesDateSetByValue(handle, meta, metaSize, fieldHandle) &
      bind(C, name='DatesDateSetByValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DatesDateSetByValue

!! ------------------------
!! Re: metadatum dateType
!! ------------------------

!! Has, by dateType
function DatesDateHasByDateType(handle, meta, metaSize) &
      bind(C, name='DatesDateHasByDateType')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: DatesDateHasByDateType
end function DatesDateHasByDateType

!! Get, by dateType, const
function DatesDateGetByDateTypeConst(handle, meta, metaSize) &
      bind(C, name='DatesDateGetByDateTypeConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: DatesDateGetByDateTypeConst
end function DatesDateGetByDateTypeConst

!! Get, by dateType
function DatesDateGetByDateType(handle, meta, metaSize) &
      bind(C, name='DatesDateGetByDateType')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: DatesDateGetByDateType
end function DatesDateGetByDateType

!! Set, by dateType
subroutine DatesDateSetByDateType(handle, meta, metaSize, fieldHandle) &
      bind(C, name='DatesDateSetByDateType')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DatesDateSetByDateType


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalDates
